--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -8,10 +8,11 @@
         android:id="@+id/tv_page_hotel"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginTop="40dp"
+        android:drawableLeft="@drawable/icon_path_left_arrow"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
         android:textColor="@android:color/white"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
 
     <TextView
@@ -19,8 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_page_hotel"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/main_my_hotal"
+        android:background="@drawable/pic_my_hotel"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -41,7 +41,7 @@
         android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/tv_hotel_1"
         android:layout_toRightOf="@id/tv_hotel_1"
-        android:background="@drawable/main_tv_live"
+        android:background="@drawable/pic_goods_order"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -61,7 +61,7 @@
         android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/tv_hotel_2"
         android:layout_toRightOf="@id/tv_hotel_2"
-        android:background="@drawable/main_movie"
+        android:background="@drawable/pic_news"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -80,7 +80,7 @@
         android:layout_alignStart="@id/tv_hotel_3"
         android:layout_toEndOf="@id/tv_hotel_2"
         android:layout_toRightOf="@id/tv_hotel_2"
-        android:background="@drawable/main_tv"
+        android:background="@drawable/pic_cost"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -97,7 +97,7 @@
         android:layout_alignTop="@id/tv_hotel_1"
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@id/tv_hotel_3"
-        android:background="@drawable/main_k_song"
+        android:background="@drawable/pic_weather"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -114,7 +114,7 @@
         android:layout_alignBottom="@id/tv_hotel_1"
         android:layout_alignLeft="@id/tv_hotel_4"
         android:layout_alignStart="@id/tv_hotel_4"
-        android:background="@drawable/main_sport"
+        android:background="@drawable/pic_multi_screen"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -133,7 +133,7 @@
         android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/tv_hotel_4"
         android:layout_toRightOf="@id/tv_hotel_4"
-        android:background="@drawable/main_entertainment"
+        android:background="@drawable/pic_theme"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -150,7 +150,7 @@
         android:layout_alignBottom="@id/tv_hotel_1"
         android:layout_alignLeft="@id/tv_hotel_5"
         android:layout_alignStart="@id/tv_hotel_5"
-        android:background="@drawable/main_game"
+        android:background="@drawable/pic_service_call"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
