--- a/app/src/main/res/drawable/dialog_right_button_bg_selector.xml
+++ b/app/src/main/res/drawable/dialog_right_button_bg_selector.xml
@@ -10,7 +10,7 @@
     <item android:state_focused="true">
         <shape>
             <corners android:bottomRightRadius="15dp"/>
-            <solid android:color="#707070"/>
+            <solid android:color="#534f4f"/>
             <stroke android:color="@android:color/transparent" android:width="0dp"/>
         </shape>
     </item>
